--- a/Common/.inputrc
+++ b/Common/.inputrc
@@ -7,3 +7,6 @@ set show-all-if-ambiguous on
 # filtered history search
 "\e[A": history-search-backward
 "\e[B": history-search-forward
+
+# vim editing mode
+set editing-mode vi
