--- a/Common/.gitconfig
+++ b/Common/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Felix Boers
-	email = felix.boers@cbc-extern.de
+	email = felix.boers@hotmail.com
 [core]
 	editor = vim
 [merge]
@@ -8,7 +8,6 @@
 [diff]
 	guitool = kdiff3
 [http]
-	proxy = http://meta-proxy.netrtl.com:8080
 	sslVerify = false
 [mergetool]
     keeptemporaries = false
