--- a/RTL/.gitconfig
+++ b/RTL/.gitconfig
@@ -2,7 +2,7 @@
 	name = Felix Boers
 	email = felix.boers@cbc-extern.de
 [core]
-	editor = vim
+	editor = \"C:/Program Files (x86)/Vim/vim80/vim.exe\"
 [merge]
 	tool = kdiff3
 [diff]
